<?xml version="1.0" encoding="utf-8"?>
<!-- Tala Bin Hussein S00049918 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#161A25"
    android:orientation="vertical"
    android:weightSum="10"

    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:text="@string/intro"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <EditText
        android:id="@+id/textEntry"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:background="@drawable/bg_graystroke"
        android:gravity="center"
        android:hint="@string/textEntry"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLength="70"
        android:maxLines="2"
        android:textColor="@color/white"
        android:textColorHint="#C1C1C1"
        android:textSize="18sp" />

    <View
        android:id="@+id/view_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <androidx.cardview.widget.CardView
        android:id="@+id/analyseButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_weight="1"
        android:background="#FFC935"
        android:backgroundTint="#FFC935"
        android:onClick="AnalyseData"
        app:cardCornerRadius="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/analyseButton"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationViewloader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.5"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/happy_loader" />

    <View

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <View

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5" />

    <TextView
        android:id="@+id/sensors"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_baseline_arrow_up"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:onClick="ShowDialogBox"
        android:text="@string/sensors"
        android:textColor="#CACACA"
        android:textSize="20sp">

    </TextView>

    <View

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />


</LinearLayout>