<?xml version="1.0" encoding="utf-8"?>
<!-- Zahraa Abbas S00050748 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:background="#161A25"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:weightSum="10"
    android:orientation="vertical"
    android:layout_height="300dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>

    <ImageButton
        android:id="@+id/close_dialog_sheet"
        android:layout_width="42dp"

        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/ic_baseline_arrow_down"
        tools:ignore="SpeakableTextPresentCheck" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <LinearLayout
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:weightSum="10"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:src="@drawable/humidity"
            android:padding="8dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>

        <TextView
            android:id="@+id/humidityDisplay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start|center_vertical"
            android:text="@string/humidityDisplay"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/humdityText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:fontFamily="@font/poppins_medium"
            android:gravity="end|center_vertical"
            android:text="@string/humidityText"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>

    </LinearLayout>




    <LinearLayout

        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:weightSum="10"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:src="@drawable/temperature"
            android:padding="8dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>

        <TextView
            android:id="@+id/temperatureDisplay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4.5"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start|center_vertical"
            android:maxLines="1"
            android:text="@string/temperatureDisplay"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/temperatureText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:fontFamily="@font/poppins_medium"
            android:gravity="end|center_vertical"
            android:maxLines="1"
            android:text="@string/temperatureDisplay"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>








</LinearLayout>